# FindDupe

./: .gitignore  .gitmodules  CMakeLists.txt  ComputeNumFiles.cpp  ComputeNumFiles.h  LICENSE  MD5.cpp  MD5.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Project.cmake  README.md  VersionInfo.cmake  application.qrc  include.cmake  main.cpp
FileTemplates/: BPS_VersionInfo.h.in  TestHeaders.cpp.in  TestHeadersMain.cpp.in  vcproj.cli.user.in  vcproj.unittest.user.in  vcproj.user.in  vcxproj.cli.user.in  vcxproj.unittest.user.in  vcxproj.vve.user.in
MainWindow/: CMakeLists.txt  ComputeNumFiles.cpp  ComputeNumFiles.h  FileFinder.cpp  FileFinder.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProgressDlg.cpp  ProgressDlg.h  ProgressDlg.ui  application.qrc  include.cmake
Modules/: FindBPSQt5.cmake  FindCreateUserVCProj.cmake
main/: CMakeLists.txt  application.rc  include.cmake  main.cpp
